--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="str_test">test github</string>
+    <string name="str_test1">test github second</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -44,7 +45,6 @@
     //
     <string name="map_api_key_path1">AIzaSyCfO6PWk2TmS59qgkwkKOse7YiJUQ1LK40</string>
     <string name="map_api_key_path">AIzaSyDE2GVFs0rOVdzoN_FmkhxF_udhNbwyCaM</string>
-
     <string name="map_api_key_place">AIzaSyDE2GVFs0rOVdzoN_FmkhxF_udhNbwyCaM</string>
 
 
