--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="action_settings">Settings</string>
     <string name="str_test">test github</string>
     <string name="str_test1">test github second</string>
+    <string name="str_test2">test github change in branch divya</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
