--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -123,5 +123,13 @@
     <string name="Success">Success</string>
     <string name="Loading">Loading</string>
 
+    // changes
+   <!-- <string name="timeonly">Time</string>
+    <string name="fair_estimate">Fair Estimate</string>`
+    <string name="fair_distance">Fair Distance</string>
+    <string name="Success">Success</string>
+    <string name="Loading">Loading</string>-->
+
+
 
 </resources>
